# ga-hls

./: .gitignore  CITATION.cff  LICENSE  README.md  Results_AFC29.csv  beter_resut.txt  change  changes.txt  config.json  exp.txt  ga.py  individual.py  launch.sh  main.py  pilot_study_ga-hls.md  pyproject.toml  report.json  requirements.hls  run.sh  sample.json  treenode.py
2025-11-28_16_25_38.000172/: dataset_qty_2025-11-28_16_25_38.000172_all.arff  hypot.txt  property_01_err_twenty.py  temp.py
configs/: AT1_config_exp1.json  AT1_config_exp2.json  AT2_config_exp4.json  example_full.json  example_minimal.json
decision_trees/: README.md  j48_config  original_formula
docker/: Dockerfile  docker-compose.yml
ga-hls/: __init__.py  cli.py  config.py  defs.py  diagnosis.py  fitness.py  ga.py  harness_script.py  individual.py  pipeline.py  treenode.py
ga_hls/: __init__.py  __main__.py  csv2tsv.py  custom_ast.py  defs.py  example_traces.txt  ga.py  individual.py  parsing.py  prop_ctrl.py  prop_ctrl3.py  property_01_err_one.py  property_01_one.py  property_04_two.py  property_distance_obs_r2.py  property_distance_pair1_one.py  property_range_pair1_one.py  property_same_aramis_velocity_four.py  requirements.hls  requirements.txt  test_chromo.py  test_iter.py  treenode.py
ga_hls.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pool/: 00.txt  01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  (+5 more)
(+8262 files in other folders)
